# django-ai-assistant

./: .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  tox.ini  versions.json
.github/workflows/: ci.yml  django.yml  docs-update.yml  node.yml  pre-commit.yml  publish.yml  release.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/changelog/: index.html
0.0.1/contributing/: index.html
0.0.1/frontend/: index.html
0.0.1/get-started/: index.html
0.0.1/reference/: index.html
0.0.1/support/: index.html
0.0.1/tutorial/: index.html
0.0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.0.2/changelog/: index.html
0.0.2/contributing/: index.html
0.0.2/frontend/: index.html
0.0.2/get-started/: index.html
0.0.2/reference/: index.html
0.0.2/support/: index.html
0.0.2/tutorial/: index.html
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/changelog/: index.html
0.0.3/contributing/: index.html
0.0.3/frontend/: index.html
0.0.3/get-started/: index.html
0.0.3/reference/: index.html
0.0.3/support/: index.html
0.0.3/tutorial/: index.html
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/changelog/: index.html
0.0.4/contributing/: index.html
0.0.4/frontend/: index.html
0.0.4/get-started/: index.html
0.0.4/reference/: index.html
0.0.4/support/: index.html
0.0.4/tutorial/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/changelog/: index.html
0.1.1/contributing/: index.html
0.1.1/frontend/: index.html
0.1.1/get-started/: index.html
0.1.1/reference/: index.html
0.1.1/support/: index.html
0.1.1/tutorial/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/changelog/: index.html
0.1.2/contributing/: index.html
0.1.2/frontend/: index.html
0.1.2/get-started/: index.html
0.1.2/reference/: index.html
0.1.2/support/: index.html
0.1.2/tutorial/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/contributing/: index.html
0.2.0/frontend/: index.html
0.2.0/get-started/: index.html
0.2.0/reference/: index.html
0.2.0/support/: index.html
0.2.0/tutorial/: index.html
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/changelog/: index.html
0.2.1/contributing/: index.html
0.2.1/frontend/: index.html
0.2.1/get-started/: index.html
0.2.1/reference/: index.html
0.2.1/search/: search_index.json
0.2.1/support/: index.html
0.2.1/tutorial/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/contributing/: index.html
0.3.0/frontend/: index.html
0.3.0/get-started/: index.html
0.3.0/reference/: index.html
0.3.0/support/: index.html
0.3.0/tutorial/: index.html
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/changelog/: index.html
0.4.0/contributing/: index.html
0.4.0/frontend/: index.html
0.4.0/get-started/: index.html
0.4.0/reference/: index.html
0.4.0/search/: search_index.json
0.4.0/support/: index.html
0.4.0/tutorial/: index.html
assistants-ref/: index.html
contributing/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/contributing/: index.html
dev/frontend/: index.html
dev/get-started/: index.html
dev/reference/: index.html
dev/search/: search_index.json
dev/support/: index.html
dev/tutorial/: index.html
django_ai_assistant/: __init__.py  admin.py  ai_client.py  api.py  apps.py  asgi.py  conf.py  decorators.py  exceptions.py  models.py  permissions.py  schemas.py  settings.py  tools.py  urls.py  views.py  wsgi.py
django_ai_assistant/ai/: assistant.py  chat_message_histories.py  client.py  function_calling.py  function_tool.py  sync.py
django_ai_assistant/api/: schemas.py  views.py
django_ai_assistant/helpers/: assistants.py  django_messages.py  formatters.py  use_cases.py
django_ai_assistant/langchain/: chat_message_histories.py  tools.py
django_ai_assistant/migrations/: 0001_initial.py  0002_assistant_cls_synced_at_assistant_openai_synced_at.py  0003_message.py  0003_message_delete_assistant_remove_thread_openai_id_and_more.py  0004_remove_message_message_created_at_desc_and_more.py  0005_alter_message_options.py  0006_thread_assistant_id.py
docs/: frontend.md  get-started.md  index.md  models-ref.md  support.md  tutorial.md
docs/reference/: assistants-ref.md  index.md  use-cases-ref.md
example/: .env.example  README.md  manage.py  openapi_schema.json  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
example/demo/: ai_assistants.py  throttles.py  urls.py  views.py  weather.py
example/example/: asgi.py  fields.py  settings.py
example/issue_tracker/: admin.py  ai_assistants.py  apps.py  models.py
example/movies/: admin.py  ai_assistants.py  apps.py
example/rag/: admin.py  ai_assistants.py  apps.py  models.py
example/tour_guide/: ai_assistants.py  apps.py  integrations.py
example/weather/: ai_assistants.py  apps.py
example_movies/: babel.config.js  manage.py  package-lock.json  package.json  prettier.config.mjs  webpack.config.js
example_movies/example_movies/: asgi.py  settings.py  urls.py  wsgi.py
example_movies/movies/: admin.py  ai_assistants.py  apps.py  models.py  views.py
example_rag/: manage.py  package-lock.json  package.json  tsconfig.json  webpack.config.js
example_rag/demo/: admin.py  ai_assistants.py  models.py  (+2 more)
frontend/: .eslintrc.cjs  README.md  generateClient.js  jest.config.ts  openapi-ts.config.ts  openapi_schema.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
get-started/: index.html
scripts/: check_packages_versions.sh
tests/: client.py  conftest.py  helpers.py  settings.py  test_assistants.py  test_conf.py  test_helpers.py  test_models.py  test_permissions.py  test_use_cases.py  test_uuid_ids.py  test_views.py  urls.py  utils.py
tutorial/: index.html
use-cases-ref/: index.html
(+129 files in other folders)
